# datastream-test

./: CMakeLists.txt
helpers/: CMakeLists.txt  channel_worker.h  cpu_kernel.cpp  cpu_kernel.h  gen_data.h  opencl.cpp  opencl.h  print.h  test.cpp  test.h  threads.cpp  threads.h
test/cpu/: CMakeLists.txt  cpu-compute-accuracy.cpp  cpu-multi-threads-compute.cpp  cpu-nt-write-bandwidth.cpp  cpu-single-thread-dry.cpp  cpu-single-thread-fill.cpp  cpu-single-thread-full-sin-ramp.cpp  cpu-single-thread-full-sin.cpp  cpu-two-threads-ring-buffer-compute.cpp  cpu-two-threads-ring-buffer.cpp  cpu-write-bandwidth.cpp
test/cpu/config/compute-accuracy/: config.yaml
test/cpu/config/multi-threads-compute-ntsize/: i9-10885h.yaml  i9-7900x.yaml  i9-9980xe.yaml  runtest.sh
test/cpu/config/multi-threads-compute-ntsize/i9-10885h/: 16chn-1048576.yaml  16chn-16777216.yaml  16chn-262144.yaml  16chn-268435456.yaml  16chn-4194304.yaml  16chn-67108864.yaml  32chn-1048576.yaml  32chn-16777216.yaml  32chn-262144.yaml  32chn-268435456.yaml  32chn-4194304.yaml  32chn-67108864.yaml  64chn-1048576.yaml  64chn-16777216.yaml  64chn-262144.yaml  64chn-268435456.yaml  64chn-4194304.yaml  64chn-67108864.yaml  8chn-1048576.yaml  8chn-16777216.yaml  8chn-262144.yaml  8chn-268435456.yaml  8chn-4194304.yaml  8chn-67108864.yaml
test/cpu/config/multi-threads-compute-ntsize/i9-10885h-2/: 8chn-1048576-nt.yaml  8chn-1048576.yaml  8chn-16777216-nt.yaml  8chn-16777216.yaml  8chn-262144-nt.yaml  8chn-262144.yaml  8chn-268435456-nt.yaml  8chn-268435456.yaml  8chn-4194304-nt.yaml  8chn-4194304.yaml  8chn-67108864-nt.yaml  8chn-67108864.yaml
test/cpu/config/multi-threads-compute-ntsize/i9-7900x/: 10chn-1048576.yaml  10chn-16777216.yaml  10chn-268435456.yaml  10chn-4194304.yaml  10chn-67108864.yaml  20chn-1048576.yaml  20chn-16777216.yaml  20chn-268435456.yaml  20chn-4194304.yaml  20chn-67108864.yaml  40chn-1048576.yaml  40chn-16777216.yaml  40chn-268435456.yaml  40chn-4194304.yaml  40chn-67108864.yaml  80chn-1048576.yaml  80chn-16777216.yaml  80chn-268435456.yaml  80chn-4194304.yaml  80chn-67108864.yaml
test/cpu/config/multi-threads-compute-ntsize/i9-9980xe/: 144chn-1048576.yaml  144chn-16777216.yaml  144chn-268435456.yaml  144chn-4194304.yaml  144chn-67108864.yaml  18chn-1048576.yaml  18chn-16777216.yaml  18chn-268435456.yaml  18chn-4194304.yaml  18chn-67108864.yaml  36chn-1048576.yaml  36chn-16777216.yaml  36chn-268435456.yaml  36chn-4194304.yaml  36chn-67108864.yaml  72chn-1048576.yaml  72chn-16777216.yaml  72chn-268435456.yaml  72chn-4194304.yaml  72chn-67108864.yaml
test/cpu/config/multi-threads-compute/i7-6700k/: 20chn-local.yaml  20chn-nolocal.yaml  40chn-local.yaml  40chn-nolocal.yaml  8chn-local.yaml  8chn-nolocal.yaml
test/cpu/config/multi-threads-compute/i9-10885h/: 16chn-local.yaml  16chn-nolocal.yaml  40chn-local.yaml  40chn-nolocal.yaml  80chn-local.yaml  80chn-nolocal.yaml
test/cpu/config/multi-threads-compute/i9-7900x/: 100chn-local.yaml  100chn-nolocal.yaml  200chn-local.yaml  200chn-nolocal.yaml  20chn-local.yaml  20chn-nolocal.yaml  50chn-local.yaml  50chn-nolocal.yaml
test/cpu/config/multi-threads-compute/i9-7900x-2/: 100chn-local.yaml  100chn-local2.yaml  100chn-nolocal.yaml  200chn-local.yaml  200chn-local2.yaml  200chn-nolocal.yaml  20chn-local.yaml  20chn-local2.yaml  20chn-nolocal.yaml  50chn-local.yaml  50chn-local2.yaml  50chn-nolocal.yaml
test/opencl/: CMakeLists.txt  opencl-compute-accuracy.cpp  opencl-dry-compute.cpp  opencl-event-overhead-2.cpp  opencl-event-overhead.cpp  opencl-mixed-compute-2.cpp  opencl-mixed-compute.cpp  opencl-parallel-rw.cpp  opencl-rw-latency.cpp  opencl-wait-overhead.cpp  opencl-write-bandwidth-mem-type.cpp  opencl-write-bandwidth.cpp
test/opencl/config/compute-accuracy/: config.yaml
test/opencl/config/dry-compute/: runtest.sh
test/opencl/config/dry-compute/generic/: 1024-1-128-ooo.yaml  1024-1-128.yaml  1024-1-256-ooo.yaml  1024-1-256.yaml  1024-1-512-ooo.yaml  1024-1-512.yaml  1024-2-128-ooo.yaml  1024-2-128.yaml  1024-2-256-ooo.yaml  1024-2-256.yaml  1024-2-512-ooo.yaml  1024-2-512.yaml  1024-4-128-ooo.yaml  1024-4-128.yaml  1024-4-256-ooo.yaml  1024-4-256.yaml  1024-4-512-ooo.yaml  1024-4-512.yaml  1024-8-128-ooo.yaml  1024-8-128.yaml  1024-8-256-ooo.yaml  1024-8-256.yaml  1024-8-512-ooo.yaml  1024-8-512.yaml  1048576-1-128-ooo.yaml  1048576-1-128.yaml  1048576-1-32-ooo.yaml  1048576-1-32.yaml  1048576-1-64-ooo.yaml  1048576-1-64.yaml  1048576-16-128-ooo.yaml  1048576-16-128.yaml  1048576-16-32-ooo.yaml  1048576-16-32.yaml  1048576-16-64-ooo.yaml  1048576-16-64.yaml  1048576-2-128-ooo.yaml  1048576-2-128.yaml  1048576-2-32-ooo.yaml  1048576-2-32.yaml  (+696 more)
test/opencl/config/dry-compute/i7-6700k/: 1-131072-ooo.yaml  1-131072.yaml  1-262144-ooo.yaml  1-524288-ooo.yaml  1-524288.yaml  1024-1024-ooo.yaml  1024-1048576-ooo.yaml  1024-128.yaml  1024-256.yaml  1048576-1-ooo.yaml  1048576-1.yaml  1048576-1024-ooo.yaml  1048576-1024.yaml  128-1024.yaml  128-2048-ooo.yaml  128-4096.yaml  128-8388608-ooo.yaml  128-8388608.yaml  (+70 more)
test/opencl/config/dry-compute/i7-6700k-multi/: 1024-1048576-1-ooo.yaml  1024-1048576-1.yaml  1024-1048576-16.yaml  1024-1048576-32-ooo.yaml  1024-1048576-32.yaml  1024-1048576-4-ooo.yaml  1024-1048576-8-ooo.yaml  128-8388608-1-ooo.yaml  128-8388608-1.yaml  128-8388608-16-ooo.yaml  128-8388608-2.yaml  128-8388608-3-ooo.yaml  128-8388608-4-ooo.yaml  128-8388608-8.yaml  16384-65536-1.yaml  16384-65536-2-ooo.yaml  16384-65536-2.yaml  16384-65536-3.yaml  16384-65536-6-ooo.yaml  16384-65536-6.yaml  16384-65536-8-ooo.yaml  2048-524288-1-ooo.yaml  2048-524288-2.yaml  2048-524288-3-ooo.yaml  2048-524288-3.yaml  2048-524288-32-ooo.yaml  2048-524288-32.yaml  2048-524288-4-ooo.yaml  2048-524288-6-ooo.yaml  2048-524288-6.yaml  2048-524288-8-ooo.yaml  256-4194304-1.yaml  256-4194304-16-ooo.yaml  256-4194304-16.yaml  256-4194304-2-ooo.yaml  256-4194304-2.yaml  256-4194304-3-ooo.yaml  256-4194304-3.yaml  256-4194304-8.yaml  4096-262144-1-ooo.yaml  (+18 more)
test/opencl/config/event-overhead-2/: runtest.sh
test/opencl/config/write-bandwidth/: runtest.sh
(+2675 files in other folders)
